--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
 <body class="bg-light">
-    <div class="container-fluid">
+    <div class="container-fluid" style="padding: 0;">
         <div class="bg-white rounded shadow p-3" style="margin: 0; border-radius: 0;">
             <h1 class="text-center mb-2">
                 <i class="fas fa-bus"></i> Tempahan Bas Pulang Bermalam
